Add: docs folder

--- a/docs/themes/ml-researcher/templates/base.html
+++ b/docs/themes/ml-researcher/templates/base.html
@@ -22,6 +22,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    {% if FAVICON %}
+    <link rel="icon" type="image/png" href="{{ SITEURL }}/{{ FAVICON }}">
+    {% endif %}
     
     {% block extra_head %}{% endblock %}
 </head>
