--- a/docs/themes/ml-researcher/templates/index.html
+++ b/docs/themes/ml-researcher/templates/index.html
@@ -8,7 +8,7 @@
         <div class="profile-section">
             <div class="profile-image-wrapper">
                 <div class="profile-image-placeholder">
-                    <span class="profile-emoji">🤖</span>
+                    <img src="{{ SITEURL }}/images/profile.jpg" alt="{{ AUTHOR }}" class="profile-image">
                 </div>
             </div>
 
