--- a/docs/themes/ml-researcher/templates/about.html
+++ b/docs/themes/ml-researcher/templates/about.html
@@ -6,8 +6,9 @@
 <article class="page-content about-page">
     <div class="about-hero">
         <div class="profile-image-wrapper">
-            <div class="profile-image-placeholder large">
-                <span class="profile-emoji">🤖</span>
+            <div class="profile-image-placeholder large" id="profile-toggle">
+                <img src="{{ SITEURL }}/images/profile.jpg" alt="Profile" class="profile-image" id="profile-img">
+                <span class="profile-emoji" id="profile-emoji" style="display: none;">🤖</span>
             </div>
         </div>
 
