Add: basic template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,6 @@
     <meta property="og:description"
         content="{{ page.og_description | default: page.description | default: site.description }}">
     <link rel="stylesheet" href="{{ '/theme/css/style.css' | relative_url }}">
-    <link rel="stylesheet" href="{{ '/theme/css/christmas.css' | relative_url }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -33,7 +32,6 @@
                         <a href="{{ '/' | relative_url }}">{{ site.title }}</a>
                     </h1>
                     <p class="site-subtitle">Ph.D. in Computer Science</p>
-                    <p class="christmas-message">🎄 Merry Christmas! ❄️</p>
                 </div>
 
                 <nav class="main-nav">
@@ -44,7 +42,7 @@
                         <li><a href="{{ '/cv/' | relative_url }}">CV</a></li>
                     </ul>
                     <button id="theme-toggle" aria-label="Toggle dark mode">
-                        <span class="theme-icon">≡ƒîÖ</span>
+                        <span class="theme-icon">🌙</span>
                     </button>
                 </nav>
             </div>
@@ -69,7 +67,7 @@
                 </div>
 
                 <div class="footer-info">
-                    <p>&copy; {{ site.author }}. Built with ≡ƒÉì Python & Γ£¿ ML magic.</p>
+                    <p>&copy; {{ site.author }}. Built with 🐍 Python & ✨ ML magic.</p>
                     <p class="tech-stack">Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a></p>
                 </div>
             </div>
